syntax = "proto3";

option csharp_namespace = "GridSystem.Web.Server.Auth";

package auth;

service Auth {
    rpc SignInUser (SignInRequest) returns (SignInResponse);
    rpc LogInUser (LogInRequest) returns (LogInResponse);
    rpc ValidateToken (TokenValidationRequest) returns (TokenValidationResponse);
    rpc GetAccessToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message SignInRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignInResponse {
    bool isSucceed = 1;
    int32 status = 2;
    string accessToken = 3;
    string refreshToken = 4;
    string error = 5;
    string userId = 6;
}

message LogInRequest {
    string username = 1;
    string password = 2;
}

message LogInResponse {
    bool isSucceed = 1;
    int32 status = 2;
    string accessToken = 3;
    string refreshToken = 4;
    string error = 5;
    string userId = 6;
}

message TokenValidationRequest {
    string accessToken = 1;
}

message TokenValidationResponse {
    bool isSucceed = 1;
    string error = 2;
    int32 status = 3;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    bool isSucceed = 1;
    int32 status = 2;
    string accessToken = 3;
    string refreshToken = 4;
    string error = 5;
}